crates/model/tests/compile_fail/fsm_exit_not_in_states.stderr
error: exit_from state `nonexistent` not found in states list
  --> tests/compile_fail/fsm_exit_not_in_states.rs:10:22
   |
10 |         exit_from: { nonexistent },
   |                      ^^^^^^^^^^^
